Agregar opción por defecto en el selector de figuras y mejorar la validación en el cálculo de área y volumen

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <div class="form-group">
                     <label for="figura">Seleccione la figura:</label>
                     <select class="form-control" id="figura" onchange="showInputs()">
+                        <option value="">Seleccione una figura...</option>
                         <option value="1">Cuadrado</option>
                         <option value="2">Rectángulo</option>
                         <option value="3">Círculo</option>
